WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69675
fix a crash when loading non-html multipart data
https://bugs.webkit.org/show_bug.cgi?id=69675
Summary
fix a crash when loading non-html multipart data
Tony Chang
Reported
2011-10-07 15:45:45 PDT
fix a crash when loading non-html multipart data
Attachments
Patch
(7.86 KB, patch)
2011-10-07 15:50 PDT
,
Tony Chang
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2011-10-07 15:50:26 PDT
Created
attachment 110228
[details]
Patch
Adam Barth
Comment 2
2011-10-07 16:03:23 PDT
Comment on
attachment 110228
[details]
Patch Ok.
Tony Chang
Comment 3
2011-10-07 16:10:50 PDT
(In reply to
comment #2
)
> (From update of
attachment 110228
[details]
) > Ok.
Thanks for the fast review!
Tony Chang
Comment 4
2011-10-07 16:18:15 PDT
Committed
r96985
: <
http://trac.webkit.org/changeset/96985
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug