fix a crash when loading non-html multipart data https://bugs.webkit.org/show_bug.cgi?id=69675

Reviewed by Adam Barth.

Source/WebCore:

setupForReplaceByMIMEType calls DocumentWriter::end().  This leads to
a crash on Mac because WebHTMLRepresentation() calls commitLoad(nil),
which tries to write to the DocumentWriter.  By just inlining the code
to load the last page, we avoid this crash (and makes the non-html
multipart code more like the html multipart code).

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::maybeFinishLoadingMultipartContent):

LayoutTests:

* http/tests/multipart/load-last-non-html-frame.php: Ensure same
  output on Apple Mac and Chromium (was getting different number of
  trailing new lines).

Canonical link: https://commits.webkit.org/85735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96985 268f45cc-cd09-0410-ab3c-d52691b4dbfc